# battery_test_gui

./: README.md  battery_logs.db  battery_logs.db-journal  components.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: sdd.md
src/: App.vue  bindings.ts  index.css
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2025-07-01-173934_battery_logs/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  misc.rs  pilot.rs  serial.rs  state.rs
src-tauri/src/database/: export.rs  mod.rs  models.rs  schema.rs  sqlite.rs
src-tauri/src/serial/: mod.rs  pilot.rs  serial.rs
src/assets/: index.css
src/components/: Charts.vue  DownloadLogs.vue  MainPage.vue  TestSelectorTabs.vue
src/components/debug/: BatteryData.vue  BatteryId.vue  BatterySelection.vue  BatteryState.vue  DebugNavBar.vue  DownloadLogs.vue  EventTest.vue  GenerateFakeData.vue  ManualAddBatteryLog.vue  SendSerial.vue
src/components/helpers/: BeginTest.vue  DownloadLogs.vue
src/components/ui/chart/: ChartLegend.vue
src/components/ui/chart-line/: LineChart.vue
src/lib/: battery.ts
